# kraken2

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  install_kraken2.sh  kraken2
data/: COVID_19.fa  FluA_H1N1.fa  FluA_H2N2.fa  FluA_H3N2.fa  FluB.fa  HIV_1.fa  HIV_2.fa  Lambda.fa  MERS.fa  README.md  SARS.fa  names.dmp  nodes.dmp  simulator.pl
docs/: MANUAL.html  MANUAL.markdown  Makefile  head.html  index.html  kraken.css  top.html
scripts/: 16S_gg_installation.sh  16S_rdp_installation.sh  16S_silva_installation.sh  add_to_library.sh  build_gg_taxonomy.pl  build_kraken2_db.sh  build_rdp_taxonomy.pl  build_silva_taxonomy.pl  clean_db.sh  cp_into_tempfile.pl  download_genomic_library.sh  download_taxonomy.sh  k2  kraken2  kraken2-build  kraken2-inspect  kraken2lib.pm  lookup_accession_numbers.pl  make_seqid2taxid_map.pl  mask_low_complexity.sh  rsync_from_ncbi.pl  scan_fasta_file.pl  standard_installation.sh
src/: CMakeLists.txt  Makefile  aa_translate.cc  aa_translate.h  assert_helpers.h  blast_defline.c  blast_defline.h  blast_to_fasta.c  blast_to_fasta.h  blast_utils.c  blast_utils.h  build_db.cc  build_db.h  classify.cc  compact_hash.cc  compact_hash.h  dump_table.cc  dustmasker.cc  estimate_capacity.cc  gzstream.h  hyperloglogplus-bias.h  hyperloglogplus.cc  hyperloglogplus.h  k2mask.cc  khash.h  khset.h  kraken2_data.h  kraken2_headers.h  kseq.h  kv_store.h  kvec.h  libtax.cpp  lookup_accession_numbers.cc  merge.cc  mmap_file.cc  mmap_file.h  mmscanner.cc  mmscanner.h  mmtest.cc  omp_hack.cc  (+13 more)
